src/tests/InvalidTests/TestAttributes5.agl
# 'rotate' identifier (',' identifier)* 'by' expression ';'

view : View with {
    Ox = -450;
    Oy = 0;
    width = 401;
    height = 401;
    title = "Illustrating a moving pacman";
    background = "alice blue";
    origin = (100, 100);    # error
}

